[package]
name = "jump"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.6"

# Redis
redis = { version = "0.23", features = ["tokio-comp"] }
deadpool-redis = "0.13"

# Async
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Rate limiting
governor = "0.6"

# Utilities
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockall = "0.11"
