[package]
name = "jump"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.6"

# Database
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.13"

# Async runtime
tokio = { version = "1.32", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
async-trait = "0.1"

# Configuration
config = "0.13"
dotenv = "0.15"

# Rate limiting
governor = "0.6"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
